# fast-api-test

./: .gitignore  README.md  fastapi.md  pyproject.toml  python-rule.md
.cursor/rules/: fastapi.mdc  python.mdc
config/: config.yaml
data/collected/: data_2025-03-25_15-07-11.json  data_2025-03-25_15-12-11.json
src/: __init__.py  main.py
src/api/: __init__.py  dependencies.py  router.py  schemas.py  service.py
src/client/: __init__.py  collector.py  scheduler.py
src/common/: __init__.py  config.py  constants.py  exceptions.py
src/data/: __init__.py  models.py
